# docker-ros

./: .gitignore  .gitmodules  pifenet.pixi.toml  pixi.toml  readme.md  setup.sh  spconv.pixi.toml
docker/: .dockerignore  Dockerfile  Dockerfile.base  base.Dockerfile  base.pixi.Dockerfile  compose.yml  docker-compose-nvidia.yml  original_dockerfile  pixi.Dockerfile  ros-velodyne-gui-compose.yml  ros-velodyne-gui-nvidia-compose.yml  ros-velodyne.Dockerfile
docker/ros2/: Dockerfile  pixi.toml
src/: conda-environment.yml  pyproject.toml  requirements.txt
